--- a/pumps.html
+++ b/pumps.html
@@ -7,7 +7,6 @@
 	<title>Trimax Century Sdn Bhd</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all">
@@ -30,7 +29,6 @@
 
 </head>
 <body>
-
 
 <div class="top-bar-area">
 	<div class="container">
@@ -96,7 +94,7 @@
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="#">Careers</a></li>
+				<li><a href="careers.html">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
 		</nav>
@@ -112,7 +110,7 @@
 					<ul>
 						<li><i class="fas fa-house-user"></i><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-						<li>Mixers</li>
+						<li>Pumps</li>
 					</ul>
 				</div>
 			</div>
@@ -144,67 +142,83 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/ism-1.png" alt="">
+						<img src="assets/images/products/bg-1.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="products/nms.html">NMS/NMSR Series</a>
-						<p>In-Liner Static Mixers</p>
-                        <a class="product-button" href="products/nms.html">View Product</a>
+						<a href="products/bg.html">BG Series</a>
+                        <a class="product-button" href="products/bg.html">View Product</a>
 					</div>
 				</div>
 			</div>			
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n1a-1.png" alt="">
+						<img src="assets/images/products/bp-1.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="products/n1a.html">N1A Series</a>
-						<p>Portable</p>
-                        <a class="product-button" href="products/n1a.html">View Product</a>
+						<a href="products/bp.html">BP Series</a>
+                        <a class="product-button" href="products/bp.html">View Product</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n5-1.png" alt="">
+						<img src="assets/images/products/bps-1.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="products/n5.html">N5 Series</a>
-						<p>Bottom Entry</p>
-                        <a class="product-button" href="products/n5.html">View Product</a>
+						<a href="products/bps.html">BPS Series</a>
+                        <a class="product-button" href="products/bps.html">View Product</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n5se-1.png" alt="">
+						<img src="assets/images/products/cl-1.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="products/n5se.html">N5SE Series</a>
-						<p>Side Entry</p>
-                        <a class="product-button" href="products/n5se.html">View Product</a>
+						<a href="products/cl.html">CL Series</a>
+                        <a class="product-button" href="products/cl.html">View Product</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/np-1.png" alt="">
+						<img src="assets/images/products/ncsp-1.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="products/np.html">NP Series</a>
-						<p>Heavy Duty</p>
-                        <a class="product-button" href="products/np.html">View Product</a>
+						<a href="products/ncsp.html">NCSP Series</a>
+                        <a class="product-button" href="products/ncsp.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/products/qqt-1.png" alt="">
+					</div>
+					<div class="products-content">
+						<a href="products/qqt.html">QQT Series</a>
+                        <a class="product-button" href="products/qqt.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/products/ea-1.png" alt="">
+					</div>
+					<div class="products-content">
+						<a href="products/ea.html">EA Series</a>
+                        <a class="product-button" href="products/ea.html">View Product</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
 
 <div class="footer-area">
 	<div class="container">
@@ -281,12 +295,12 @@
 						</div>
 					    <div class="footer-widget-contact">
 							<ul>
-								<li><a href="#">sales@neutrone.com.my</a></li>
-								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">admin@trimaxcentury.com.my</a></li>
-								<li><a href="#">max_century88@yahoo.com</a></li>
+								<li><a href="mailto:sales@neutrone.com.my">sales@neutrone.com.my</a></li>
+								<li><a href="mailto:sales@trimaxcentury.com.my">sales@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:admin@trimaxcentury.com.my">admin@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:max_century88@yahoo.com">max_century88@yahoo.com</a></li>
 								<li><a href="#">+603-8062 5093</a></li>
-								<li><a href="#">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
+								<li><a href="https://maps.app.goo.gl/KAp8bciJcDD7i1fu7" target="_blank">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
 							</ul>
 						</div>
 					</div>
@@ -304,7 +318,7 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="index.html">Home</a></li>
+			    			<li><a href="#">Home</a></li>
 			    			<li><a href="#">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
