--- a/header.html
+++ b/header.html
@@ -40,7 +40,7 @@
 						<li><a href="about.html">Corporate Information</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#">Careers</a></li>
+						<li><a href="careers.html">Careers</a></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 				</div>
@@ -62,7 +62,7 @@
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="#">Careers</a></li>
+				<li><a href="careers.html">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
 		</nav>
