--- a/footer.html
+++ b/footer.html
@@ -96,8 +96,8 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="#">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="index.html">Home</a></li>
+			    			<li><a href="privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
