--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<li><a href="about.html">Corporate Information</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#">Careers</a></li>
+						<li><a href="careers.html">Careers</a></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 				</div>
@@ -96,7 +96,7 @@
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="#">Careers</a></li>
+				<li><a href="careers.html">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
 		</nav>
@@ -648,8 +648,8 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="#">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="index.html">Home</a></li>
+			    			<li><a href="privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
@@ -690,8 +690,6 @@
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<script src="assets/js/scrollCue.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
-
-	
 
 <script>
 	
