--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
 						<li><a href="about.html">Corporate Information</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#">Careers</a></li>
+						<li><a href="careers.html">Careers</a></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 				</div>
@@ -94,7 +94,7 @@
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="#">Careers</a></li>
+				<li><a href="careers.html">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
 		</nav>
