--- a/products.html
+++ b/products.html
@@ -167,6 +167,7 @@
 </div>
 
 
+
 <div class="footer-area">
 	<div class="container">
 		<div class="row">
@@ -254,7 +255,6 @@
 				</div>
 			</div>
 		</div>
-		<!--footer-bottom-->
 		<div class="footer-bottom">
 			<div class="row align-items-center">
 				<div class="col-md-6">
@@ -265,8 +265,8 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="#">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="index.html">Home</a></li>
+			    			<li><a href="privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
@@ -274,6 +274,7 @@
 		</div>
 	</div>
 </div>
+
 
    <div class="prgoress_indicator active-progress">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
