--- a/pumps.html
+++ b/pumps.html
@@ -220,6 +220,7 @@
 	</div>
 </div>
 
+
 <div class="footer-area">
 	<div class="container">
 		<div class="row">
@@ -318,8 +319,8 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="#">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="index.html">Home</a></li>
+			    			<li><a href="privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
@@ -327,18 +328,6 @@
 		</div>
 	</div>
 </div>
-
-<div class="search-popup">
-	<button class="close-search style-two"><span class="flaticon-multiply"><i class="far fa-times-circle"></i></span></button>
-	<form method="post" action="#">
-		<div class="form-group">
-			<input type="search" name="search-field" value="" placeholder="Search Here" required="">
-			<button type="submit"><i class="fa fa-search"></i></button>
-		</div>
-	</form>
-</div>
-
-
 
    <div class="prgoress_indicator active-progress">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -348,34 +337,20 @@
 
 	<script src="assets/js/vendor/jquery-3.6.2.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
-	<!-- bootstrap js -->
 	<script src="assets/js/bootstrap.min.js"></script>
-	<!-- carousel js -->
 	<script src="assets/js/owl.carousel.min.js"></script>
-	<!-- counterup js -->
 	<script src="assets/js/jquery.counterup.min.js"></script>
-	<!-- waypoints js -->
 	<script src="assets/js/waypoints.min.js"></script>
-	<!-- wow js -->
 	<script src="assets/js/wow.js"></script>
-	<!-- imagesloaded js -->
 	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-
-	<!--  animated-text js -->
 	<script src="assets/js/animated-text.js"></script>
-	<!-- isotope js -->
 	<script src="assets/js/isotope.pkgd.min.js"></script>
-	<!-- jquery meanmenu js -->
 	<script src="assets/js/jquery.meanmenu.js"></script>
-
-	<!-- jquery scrollup js -->
 	<script src="assets/js/jquery.scrollUp.js"></script>
-	<!-- theme js -->
 	<script src="assets/js/theme.js"></script>
-	<!-- barfiller -->
 	<script src="assets/js/jquery.barfiller.js"></script>
-	<!-- barfiller -->
 	<script src="assets/js/scrollCue.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
 
 </body>
 
