--- a/pumps.html
+++ b/pumps.html
@@ -72,7 +72,7 @@
 						<li><a href="about.html">Corporate Information</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#">Careers</a></li>
+						<li><a href="careers.html">Careers</a></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 				</div>
@@ -123,7 +123,7 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-md-12">
 				<div class="section-title inner">
-					<h1>Mixers</h1>
+					<h1>Pumps</h1>
 				</div>
 			</div>
 			<div class="col-lg-6 col-md-12 d-none">
@@ -227,7 +227,6 @@
 	</div>
 </div>
 
-
 <div class="footer-area">
 	<div class="container">
 		<div class="row">
@@ -315,7 +314,6 @@
 				</div>
 			</div>
 		</div>
-		<!--footer-bottom-->
 		<div class="footer-bottom">
 			<div class="row align-items-center">
 				<div class="col-md-6">
