--- a/about.html
+++ b/about.html
@@ -466,8 +466,7 @@
 						</div>
 						<div class="footer-social-icon">
 							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/neutronemixers/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							</ul>
 						</div>
 					</div>
