--- a/mixers.html
+++ b/mixers.html
@@ -248,8 +248,7 @@
 						</div>
 						<div class="footer-social-icon">
 							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/neutronemixers/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -280,12 +279,12 @@
 						</div>
 					    <div class="footer-widget-contact">
 							<ul>
-								<li><a href="#">sales@neutrone.com.my</a></li>
-								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">admin@trimaxcentury.com.my</a></li>
-								<li><a href="#">max_century88@yahoo.com</a></li>
+								<li><a href="mailto:sales@neutrone.com.my">sales@neutrone.com.my</a></li>
+								<li><a href="mailto:sales@trimaxcentury.com.my">sales@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:admin@trimaxcentury.com.my">admin@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:max_century88@yahoo.com">max_century88@yahoo.com</a></li>
 								<li><a href="#">+603-8062 5093</a></li>
-								<li><a href="#">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
+								<li><a href="https://maps.app.goo.gl/KAp8bciJcDD7i1fu7" target="_blank">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
 							</ul>
 						</div>
 					</div>
@@ -304,7 +303,7 @@
 			    	<div class="footer-list-item">
 			    		<ul>
 			    			<li><a href="index.html">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
@@ -331,36 +330,21 @@
         </svg>
     </div>
 
-	<script src="assets/js/vendor/jquery-3.6.2.min.js"></script>
-	<script src="assets/js/popper.min.js"></script>
-	<!-- bootstrap js -->
-	<script src="assets/js/bootstrap.min.js"></script>
-	<!-- carousel js -->
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<!-- counterup js -->
-	<script src="assets/js/jquery.counterup.min.js"></script>
-	<!-- waypoints js -->
-	<script src="assets/js/waypoints.min.js"></script>
-	<!-- wow js -->
-	<script src="assets/js/wow.js"></script>
-	<!-- imagesloaded js -->
-	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-
-	<!--  animated-text js -->
-	<script src="assets/js/animated-text.js"></script>
-	<!-- isotope js -->
-	<script src="assets/js/isotope.pkgd.min.js"></script>
-	<!-- jquery meanmenu js -->
-	<script src="assets/js/jquery.meanmenu.js"></script>
-
-	<!-- jquery scrollup js -->
-	<script src="assets/js/jquery.scrollUp.js"></script>
-	<!-- theme js -->
-	<script src="assets/js/theme.js"></script>
-	<!-- barfiller -->
-	<script src="assets/js/jquery.barfiller.js"></script>
-	<!-- barfiller -->
-	<script src="assets/js/scrollCue.min.js"></script>
+	<script src="../assets/js/vendor/jquery-3.6.2.min.js"></script>
+	<script src="../assets/js/popper.min.js"></script>
+	<script src="../assets/js/bootstrap.min.js"></script>
+	<script src="../assets/js/owl.carousel.min.js"></script>
+	<script src="../assets/js/jquery.counterup.min.js"></script>
+	<script src="../assets/js/waypoints.min.js"></script>
+	<script src="../assets/js/wow.js"></script>
+	<script src="../assets/js/imagesloaded.pkgd.min.js"></script>
+	<script src="../assets/js/animated-text.js"></script>
+	<script src="../assets/js/isotope.pkgd.min.js"></script>
+	<script src="../assets/js/jquery.meanmenu.js"></script>
+	<script src="../assets/js/jquery.scrollUp.js"></script>
+	<script src="../assets/js/theme.js"></script>
+	<script src="../assets/js/jquery.barfiller.js"></script>
+	<script src="../assets/js/scrollCue.min.js"></script>
 
 </body>
 
