--- a/mixers.html
+++ b/mixers.html
@@ -330,21 +330,21 @@
         </svg>
     </div>
 
-	<script src="../assets/js/vendor/jquery-3.6.2.min.js"></script>
-	<script src="../assets/js/popper.min.js"></script>
-	<script src="../assets/js/bootstrap.min.js"></script>
-	<script src="../assets/js/owl.carousel.min.js"></script>
-	<script src="../assets/js/jquery.counterup.min.js"></script>
-	<script src="../assets/js/waypoints.min.js"></script>
-	<script src="../assets/js/wow.js"></script>
-	<script src="../assets/js/imagesloaded.pkgd.min.js"></script>
-	<script src="../assets/js/animated-text.js"></script>
-	<script src="../assets/js/isotope.pkgd.min.js"></script>
-	<script src="../assets/js/jquery.meanmenu.js"></script>
-	<script src="../assets/js/jquery.scrollUp.js"></script>
-	<script src="../assets/js/theme.js"></script>
-	<script src="../assets/js/jquery.barfiller.js"></script>
-	<script src="../assets/js/scrollCue.min.js"></script>
+	<script src="assets/js/vendor/jquery-3.6.2.min.js"></script>
+	<script src="assets/js/popper.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/owl.carousel.min.js"></script>
+	<script src="assets/js/jquery.counterup.min.js"></script>
+	<script src="assets/js/waypoints.min.js"></script>
+	<script src="assets/js/wow.js"></script>
+	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
+	<script src="assets/js/animated-text.js"></script>
+	<script src="assets/js/isotope.pkgd.min.js"></script>
+	<script src="assets/js/jquery.meanmenu.js"></script>
+	<script src="assets/js/jquery.scrollUp.js"></script>
+	<script src="assets/js/theme.js"></script>
+	<script src="assets/js/jquery.barfiller.js"></script>
+	<script src="assets/js/scrollCue.min.js"></script>
 
 </body>
 
