--- a/products.html
+++ b/products.html
@@ -166,8 +166,6 @@
 	</div>
 </div>
 
-
-
 <div class="footer-area">
 	<div class="container">
 		<div class="row">
@@ -211,8 +209,7 @@
 						</div>
 						<div class="footer-social-icon">
 							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/neutronemixers/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -255,6 +252,7 @@
 				</div>
 			</div>
 		</div>
+		<!--footer-bottom-->
 		<div class="footer-bottom">
 			<div class="row align-items-center">
 				<div class="col-md-6">
@@ -285,6 +283,8 @@
 	</form>
 </div>
 
+
+
    <div class="prgoress_indicator active-progress">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
           <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" style="transition: stroke-dashoffset 10ms linear 0s; stroke-dasharray: 307.919, 307.919; stroke-dashoffset: 270.456;"></path>
@@ -306,7 +306,6 @@
 	<script src="assets/js/theme.js"></script>
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<script src="assets/js/scrollCue.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
 
 </body>
 
