--- a/products/nms.html
+++ b/products/nms.html
@@ -301,8 +301,7 @@
 						</div>
 						<div class="footer-social-icon">
 							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/neutronemixers/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -333,12 +332,12 @@
 						</div>
 					    <div class="footer-widget-contact">
 							<ul>
-								<li><a href="#">sales@neutrone.com.my</a></li>
-								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">admin@trimaxcentury.com.my</a></li>
-								<li><a href="#">max_century88@yahoo.com</a></li>
+								<li><a href="mailto:sales@neutrone.com.my">sales@neutrone.com.my</a></li>
+								<li><a href="mailto:sales@trimaxcentury.com.my">sales@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:admin@trimaxcentury.com.my">admin@trimaxcentury.com.my</a></li>
+								<li><a href="mailto:max_century88@yahoo.com">max_century88@yahoo.com</a></li>
 								<li><a href="#">+603-8062 5093</a></li>
-								<li><a href="#">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
+								<li><a href="https://maps.app.goo.gl/KAp8bciJcDD7i1fu7" target="_blank">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
 							</ul>
 						</div>
 					</div>
@@ -356,8 +355,8 @@
 			    <div class="col-md-6">
 			    	<div class="footer-list-item">
 			    		<ul>
-			    			<li><a href="index.html">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
+			    			<li><a href="../index.html">Home</a></li>
+			    			<li><a href="../privacy.html">Privacy Notice</a></li>
 			    		</ul>
 			    	</div>
 			    </div>		
