--- a/products/qqt.html
+++ b/products/qqt.html
@@ -108,7 +108,7 @@
 					<ul>
 						<li><i class="fas fa-house-user"></i><a href="../index.html">Home</a></li>
 						<li><a href="../products.html">Products</a></li>
-						<li><a href="../mixers.html">Pumps</a></li>
+						<li><a href="../pumps.html">Pumps</a></li>
 						<li>QQT Series</li>
 					</ul>
 				</div>
