--- a/pumps.html
+++ b/pumps.html
@@ -142,7 +142,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/bg-1.png" alt="">
+						<a href="products/bg.html"><img src="assets/images/products/bg-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/bg.html">BG Series</a>
@@ -154,7 +154,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/bp-1.png" alt="">
+						<a href="products/bp.html"><img src="assets/images/products/bp-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/bp.html">BP Series</a>
@@ -166,7 +166,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/bps-1.png" alt="">
+						<a href="products/bps.html"><img src="assets/images/products/bps-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/bps.html">BPS Series</a>
@@ -178,7 +178,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/cl-1.png" alt="">
+						<a href="products/cl.html"><img src="assets/images/products/cl-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/cl.html">CL Series</a>
@@ -190,7 +190,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/ncsp-1.png" alt="">
+						<a href="products/ncsp.html"><img src="assets/images/products/ncsp-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/ncsp.html">NCSP Series</a>
@@ -202,7 +202,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/qqt-1.png" alt="">
+						<a href="products/qqt.html"><img src="assets/images/products/qqt-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/qqt.html">QQT Series</a>
@@ -214,7 +214,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/eas-1.png" alt="">
+						<a href="products/ea.html"><img src="assets/images/products/eas-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/ea.html">EA Series</a>
