--- a/mixers.html
+++ b/mixers.html
@@ -143,7 +143,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/ism-1.png" alt="">
+						<a href="products/nms.html"><img src="assets/images/products/ism-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/nms.html">NMS/NMSR Series</a>
@@ -155,7 +155,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n1a-1.png" alt="">
+						<a href="products/n1a.html"><img src="assets/images/products/n1a-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/n1a.html">N1A Series</a>
@@ -167,7 +167,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n5-1.png" alt="">
+						<a href="products/n5.html"><img src="assets/images/products/n5-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/n5.html">N5 Series</a>
@@ -179,7 +179,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/n5se-1.png" alt="">
+						<a href="products/n5se.html"><img src="assets/images/products/n5se-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/n5se.html">N5SE Series</a>
@@ -191,7 +191,7 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/products/np-1.png" alt="">
+						<a href="products/np.html"><img src="assets/images/products/np-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
 						<a href="products/np.html">NP Series</a>
