--- a/products/bg.html
+++ b/products/bg.html
@@ -32,7 +32,7 @@
 			<div class="row align-items-center">
 				<div class="col-md-4">
 					<div class="header-logo">
-						<a href="index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
+						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
 					</div>
 				</div>
 				<div class="col-md-8">
