--- a/gallery.html
+++ b/gallery.html
@@ -131,14 +131,13 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Key foature Largest Passive House Building Solution</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">Ancom Chemical Plant</a>
+						<p>NP Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
@@ -151,14 +150,13 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Modren Glass Building in Construction</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">Hoya WWTP Singapore</a>
+						<p>N2 & N5 Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
@@ -171,11 +169,10 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">How to Secure Funding for Your New Home at London</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">IOI Esterchem Storage Tank Farm</a>
+						<p>N5SE Series</p>
 
                         <div class="blog-button">
                          	<a href="#">Read More</a>
@@ -191,14 +188,13 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">How to Secure Funding for Your New Home at London</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">KLIA WTP - Flocculator</a>
+						<p>NP Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View<a>
                         </div>
 					</div>
 				</div>
@@ -211,11 +207,10 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Key foature Largest Passive House Building Solution</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">Mastra Agricultural Chemical Plant</a>
+						<p>N2 & N2 Series </p>
 
                         <div class="blog-button">
                          	<a href="#">Read More</a>
@@ -231,14 +226,13 @@
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
-							<span>April 3, 2024</span>
+							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Modren Glass Building in Construction</a>
-						<p>Urabitur lobortis mauris placerat quam netus
-                         litora eros purus,Our Services </p>
+						<a href="#">PPP Green Complex Storage Tank Farm</a>
+						<p>N5SE Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
