--- a/gallery.html
+++ b/gallery.html
@@ -171,11 +171,11 @@
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">IOI Esterchem Storage Tank Farm</a>
+						<a href="#">IOI Esterchem Storage Tank</a>
 						<p>N5SE Series</p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
@@ -213,7 +213,7 @@
 						<p>N2 & N2 Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">Read More</a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
