--- a/gallery.html
+++ b/gallery.html
@@ -194,7 +194,7 @@
 						<p>NP Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View<a>
+                         	<a href="#">View</a>
                         </div>
 					</div>
 				</div>
