--- a/gallery.html
+++ b/gallery.html
@@ -125,18 +125,18 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-blog-box blog-gid">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-1.jpg" alt="">
+						<a href="gallery-1.html"><img src="assets/images/gallery/gallery-1.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Ancom Chemical Plant</a>
+						<a href="gallery-1.html">Ancom Chemical Plant</a>
 						<p>NP Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-1.html">View</a>
                         </div>
 					</div>
 				</div>
@@ -144,18 +144,18 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-blog-box blog-gid">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-2.jpg" alt="">
+						<a href="gallery-2.html"><img src="assets/images/gallery/gallery-2.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Hoya WWTP Singapore</a>
+						<a href="gallery-2.html">Hoya WWTP Singapore</a>
 						<p>N2 & N5 Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-2.html">View</a>
                         </div>
 					</div>
 				</div>
@@ -163,18 +163,18 @@
 			<div class="col-lg-4 col-md-6">
 				<div class="single-blog-box blog-gid">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-3.jpg" alt="">
+						<a href="gallery-3.html"><img src="assets/images/gallery/gallery-3.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">IOI Esterchem Storage Tank</a>
+						<a href="gallery-3.html">IOI Esterchem Storage Tank</a>
 						<p>N5SE Series</p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-3.html">View</a>
                         </div>
 					</div>
 				</div>
@@ -182,18 +182,18 @@
 			<div class="col-lg-4 col-md-6 blog-gid">
 				<div class="single-blog-box">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-3.jpg" alt="">
+						<a href="gallery-4.html"><img src="assets/images/gallery/gallery-4.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">KLIA WTP - Flocculator</a>
+						<a href="gallery-4.html">KLIA WTP - Flocculator</a>
 						<p>NP Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-4.html">View</a>
                         </div>
 					</div>
 				</div>
@@ -201,18 +201,18 @@
 			<div class="col-lg-4 col-md-6 blog-gid">
 				<div class="single-blog-box">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-1.jpg" alt="">
+						<a href="gallery-5.html"><img src="assets/images/gallery/gallery-5.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">Mastra Agricultural Chemical Plant</a>
+						<a href="gallery-5.html">Mastra Agricultural Chemical Plant</a>
 						<p>N2 & N2 Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-5.html">View</a>
                         </div>
 					</div>
 				</div>
@@ -220,18 +220,18 @@
 			<div class="col-lg-4 col-md-6 blog-gid">
 				<div class="single-blog-box">
 					<div class="single-blog-thumb">
-						<img src="assets/images/resource/blog-2.jpg" alt="">
+						<a href="gallery-6.html"><img src="assets/images/gallery/gallery-6.jpg" alt=""></a>
 					</div>
 					<div class="blog-content">
 						<div class="meta-blog">
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="#">PPP Green Complex Storage Tank Farm</a>
+						<a href="gallery-6.html">PPP Green Complex Storage Tank Farm</a>
 						<p>N5SE Series </p>
 
                         <div class="blog-button">
-                         	<a href="#">View</a>
+                         	<a href="gallery-6.html">View</a>
                         </div>
 					</div>
 				</div>
