--- a/gallery-2.html
+++ b/gallery-2.html
@@ -128,7 +128,7 @@
 									<h1>Hoya WWTP Singapore</h1>
 								</div>
 								<div class="product-thumb">
-									<img src="assets/images/gallery/hoya-1.jpg" alt="">
+									<img class="pb-2" src="assets/images/gallery/hoya-1.jpg" alt="">
 									<img src="assets/images/gallery/hoya-2.jpg" alt="">
 								</div>
 							</div>
