--- a/gallery-3.html
+++ b/gallery-3.html
@@ -128,8 +128,8 @@
 									<h1>IOI Esterchem Storage Tank Farm</h1>
 								</div>
 								<div class="product-thumb">
-									<img class="pb-2" src="assets/images/gallery/ioi-1.jpg" alt="">
-									<img src="assets/images/gallery/ioi-2.jpg" alt="">
+									<img class="pb-2" src="assets/images/gallery/ioi-1.JPG" alt="">
+									<img src="assets/images/gallery/ioi-2.JPG" alt="">
 								</div>
 							</div>
 						</div>
