--- a/gallery-4.html
+++ b/gallery-4.html
@@ -128,7 +128,7 @@
 									<h1>KLIA WTP - Flocculator</h1>
 								</div>
 								<div class="product-thumb">
-									<img src="assets/images/gallery/klia-1.jpeg" alt="">
+									<img src="assets/images/gallery/klia-1.JPEG" alt="">
 								</div>
 							</div>
 						</div>
