--- a/gallery.html
+++ b/gallery.html
@@ -142,7 +142,7 @@
 				</div>
 			</div>			
 			<div class="col-lg-4 col-md-6">
-				<div class="single-blog-box blog-gid">
+				<div class="single-blog-box">
 					<div class="single-blog-thumb">
 						<a href="gallery-2.html"><img src="assets/images/gallery/gallery-2.jpg" alt=""></a>
 					</div>
@@ -161,7 +161,7 @@
 				</div>
 			</div>		
 			<div class="col-lg-4 col-md-6">
-				<div class="single-blog-box blog-gid">
+				<div class="single-blog-box">
 					<div class="single-blog-thumb">
 						<a href="gallery-3.html"><img src="assets/images/gallery/gallery-3.jpg" alt=""></a>
 					</div>
@@ -179,8 +179,8 @@
 					</div>
 				</div>
 			</div>			
-			<div class="col-lg-4 col-md-6 blog-gid">
-				<div class="single-blog-box">
+			<div class="col-lg-4 col-md-6">
+				<div class="single-blog-box blog-gid">
 					<div class="single-blog-thumb">
 						<a href="gallery-4.html"><img src="assets/images/gallery/gallery-4.jpg" alt=""></a>
 					</div>
@@ -198,7 +198,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6 blog-gid">
+			<div class="col-lg-4 col-md-6">
 				<div class="single-blog-box">
 					<div class="single-blog-thumb">
 						<a href="gallery-5.html"><img src="assets/images/gallery/gallery-5.jpg" alt=""></a>
@@ -208,7 +208,7 @@
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="gallery-5.html">Mastra Agricultural Chemical Plant</a>
+						<a href="gallery-5.html">Mastra Agricultural...</a>
 						<p>N2 & N2 Series </p>
 
                         <div class="blog-button">
@@ -217,7 +217,7 @@
 					</div>
 				</div>
 			</div>			
-			<div class="col-lg-4 col-md-6 blog-gid">
+			<div class="col-lg-4 col-md-6">
 				<div class="single-blog-box">
 					<div class="single-blog-thumb">
 						<a href="gallery-6.html"><img src="assets/images/gallery/gallery-6.jpg" alt=""></a>
@@ -227,7 +227,7 @@
 							<span>admin</span>
 							<span>Feb 7, 2025</span>
 						</div>
-						<a href="gallery-6.html">PPP Green Complex Storage Tank Farm</a>
+						<a href="gallery-6.html">PPP Green Complex...</a>
 						<p>N5SE Series </p>
 
                         <div class="blog-button">
@@ -235,7 +235,83 @@
                         </div>
 					</div>
 				</div>
-			</div>	
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-blog-box blog-gid">
+					<div class="single-blog-thumb">
+						<a href="gallery-7.html"><img src="assets/images/gallery/gallery-7.jpg" alt=""></a>
+					</div>
+					<div class="blog-content">
+						<div class="meta-blog">
+							<span>admin</span>
+							<span>Feb 13, 2025</span>
+						</div>
+						<a href="gallery-7.html">Semenyih 2 WTP</a>
+						<p>NP Series </p>
+
+                        <div class="blog-button">
+                         	<a href="gallery-7.html">View</a>
+                        </div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-blog-box">
+					<div class="single-blog-thumb">
+						<a href="gallery-8.html"><img src="assets/images/gallery/gallery-8.jpg" alt=""></a>
+					</div>
+					<div class="blog-content">
+						<div class="meta-blog">
+							<span>admin</span>
+							<span>Feb 13, 2025</span>
+						</div>
+						<a href="gallery-8.html">Sungai Dara WTP</a>
+						<p>NP Series </p>
+
+                        <div class="blog-button">
+                         	<a href="gallery-8.html">View</a>
+                        </div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-blog-box">
+					<div class="single-blog-thumb">
+						<a href="gallery-9.html"><img src="assets/images/gallery/gallery-9.jpg" alt=""></a>
+					</div>
+					<div class="blog-content">
+						<div class="meta-blog">
+							<span>admin</span>
+							<span>Feb 13, 2025</span>
+						</div>
+						<a href="gallery-9.html">Sungai Dua WTP</a>
+						<p>NP Series </p>
+
+                        <div class="blog-button">
+                         	<a href="gallery-9.html">View</a>
+                        </div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-blog-box">
+					<div class="single-blog-thumb">
+						<a href="gallery-10.html"><img src="assets/images/gallery/gallery-10.jpg" alt=""></a>
+					</div>
+					<div class="blog-content">
+						<div class="meta-blog">
+							<span>admin</span>
+							<span>Feb 13, 2025</span>
+						</div>
+						<a href="gallery-10.html">Teluk Kepayang WTP</a>
+						<p>NP Series </p>
+
+                        <div class="blog-button">
+                         	<a href="gallery-10.html">View</a>
+                        </div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
