--- a/gallery-5.html
+++ b/gallery-5.html
@@ -108,7 +108,7 @@
 					<h1>Gallery</h1>
 					<ul>
 						<li><i class="fas fa-house-user"></i><a href="index.html">Home</a></li>
-						<li><a href="Gallery.html">Gallery</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li>Mastra Agricultural Chemical Plant</li>
 					</ul>
 				</div>
