--- a/mixers.html
+++ b/mixers.html
@@ -143,36 +143,24 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<a href="products/nms.html"><img src="assets/images/products/ism-1.png" alt=""></a>
+						<a href="products/n1.html"><img src="assets/images/products/n1-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
-						<a href="products/nms.html">NMS/NMSR Series</a>
-						<p>In-Liner Static Mixers</p>
-                        <a class="product-button" href="products/nms.html">View Product</a>
+						<a href="products/n1.html">N1/N2/N3/N5 Series</a>
+						<p>Portable/Light/Medium Duty</p>
+                        <a class="product-button" href="products/n1.html">View Product</a>
 					</div>
 				</div>
 			</div>			
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<a href="products/n1a.html"><img src="assets/images/products/n1a-1.png" alt=""></a>
+						<a href="products/np.html"><img src="assets/images/products/np-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
-						<a href="products/n1a.html">N1A Series</a>
-						<p>Portable</p>
-                        <a class="product-button" href="products/n1a.html">View Product</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 grid-item mixer">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<a href="products/n5.html"><img src="assets/images/products/n5-1.png" alt=""></a>
-					</div>
-					<div class="products-content">
-						<a href="products/n5.html">N5 Series</a>
-						<p>Bottom Entry</p>
-                        <a class="product-button" href="products/n5.html">View Product</a>
+						<a href="products/np.html">NP Series</a>
+						<p>Heavy Duty</p>
+                        <a class="product-button" href="products/np.html">View Product</a>
 					</div>
 				</div>
 			</div>
@@ -191,12 +179,48 @@
 			<div class="col-lg-4 grid-item mixer">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<a href="products/np.html"><img src="assets/images/products/np-1.png" alt=""></a>
+						<a href="products/n5se.html"><img src="assets/images/products/ism-1.png" alt=""></a>
 					</div>
 					<div class="products-content">
-						<a href="products/np.html">NP Series</a>
-						<p>Heavy Duty</p>
-                        <a class="product-button" href="products/np.html">View Product</a>
+						<a href="products/n5se.html">NMS/NMSR Series</a>
+						<p>In-Liner Static</p>
+                        <a class="product-button" href="products/nms.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/nhsm.html"><img src="assets/images/products/nhsm-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/nhsm.html">NHSM Series</a>
+						<p>High Shear</p>
+                        <a class="product-button" href="products/nhsm.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/n5be.html"><img src="assets/images/products/n5be-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/n5be.html">N5BE Series</a>
+						<p>Bottom Entry</p>
+                        <a class="product-button" href="products/n5be.html">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item mixer">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<a href="products/impeller.html"><img src="assets/images/products/impeller-1.png" alt=""></a>
+					</div>
+					<div class="products-content">
+						<a href="products/impeller.html">Impeller Series</a>
+						<p>Impeller Technologies</p>
+                        <a class="product-button" href="products/impeller.html">View Product</a>
 					</div>
 				</div>
 			</div>
