--- a/products.html
+++ b/products.html
@@ -138,26 +138,35 @@
 			</div>
 		</div>
 		<div class="row image_load">
-			<div class="col-lg-6 grid-item pump">
+			<div class="col-lg-4 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="mixers.html">Neutrone® Mixers</a>
-						<p>Portable</p>
+						<a class="mb-3" href="mixers.html">Neutrone® Mixers</a>
                         <a class="product-button" href="mixers.html">View Products</a>
 					</div>
 				</div>
-			</div>			
-			<div class="col-lg-6 grid-item pump">
+			</div>
+			<div class="col-lg-4 grid-item">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/resource/mixers.png" alt="">
+					</div>
+					<div class="products-content">
+						<a class="mb-3" target="_blank" href="assets/docs/general.pdf">Neutrone® Mixers</a>
+                        <a class="product-button" target="_blank" href="assets/docs/general.pdf">View Brochure</a>
+					</div>
+				</div>
+			</div>					
+			<div class="col-lg-4 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/pumps.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="pumps.html">Neutrone® Pumps</a>
-						<p>Side Entry</p>
+						<a class="mb-3" href="pumps.html">Neutrone® Pumps</a>
                         <a class="product-button" href="pumps.html">View Products</a>
 					</div>
 				</div>
